syntax = "proto3";
package heimdall.auth.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/maticnetwork/heimdall/x/auth/types";
option (gogoproto.sizer_all)        = false;
option (gogoproto.marshaler_all)    = false;
option (gogoproto.unmarshaler_all)  = false;

// GenesisState defines the auth module's genesis state.
message GenesisState {
  // params defines all the paramaters of the module.
  Params params = 1 [(gogoproto.nullable) = false];

  // accounts are the accounts present at genesis.
  repeated GenesisAccount accounts = 2;
}


// Params defines the parameters for the auth module.
message Params {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_stringer) = false;


  uint64 max_memo_characters     = 1 [(gogoproto.moretags) = "yaml:\"max_memo_characters\""];
  uint64 tx_sig_limit            = 2 [(gogoproto.moretags) = "yaml:\"tx_sig_limit\""];
  uint64 tx_size_cost_per_byte   = 3 [(gogoproto.moretags) = "yaml:\"tx_size_cost_per_byte\""];
  uint64 sig_verify_cost_ed25519 = 4
      [(gogoproto.customname) = "SigVerifyCostED25519", (gogoproto.moretags) = "yaml:\"sig_verify_cost_ed25519\""];
  uint64 sig_verify_cost_secp256k1 = 5
      [(gogoproto.customname) = "SigVerifyCostSecp256k1", (gogoproto.moretags) = "yaml:\"sig_verify_cost_secp256k1\""];
  uint64 max_tx_gas     = 6 [(gogoproto.moretags) = "yaml:\"max_tx_gas\""];
  string tx_fees     = 7 [(gogoproto.moretags) = "yaml:\"tx_fees\""];
}


message GenesisAccount {
  option (gogoproto.goproto_getters)  = false;
  string                       address = 1 [
    (gogoproto.casttype)   = "github.com/maticnetwork/heimdall/types/common.HeimdallAddress"
  ];
  string                     coins = 2 [
    (gogoproto.casttype)   = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  uint64                   sequence = 3;
  uint64                   account_number = 4;
  string                    module_name = 5;
  repeated string                    module_permissions = 6;
}
